$Id$

OpenDNSSEC 1.3.0

* Just warn if occluded zone data was found, don't stop signing process.
* Threaded signer: Set number of <SignerThreads> in conf.xml to 
  get peak performance from HSMs that can handle multiple threads.
* Signer Engine: simpler serial maintenance, reduces the number of conflicts.
  Less chance to hit a 'cannot update: serial too small' error message.
* Signer Engine: simpler NSEC(3) maintenance.

Bugfixes:
* Auditor: 'make check' now works when srcdir != builddir.
* Auditor: Include the 'make check' files in the tarball.
* Replace tab with white-space when writing to syslog.
* Enforcer: Stop import of policy if it is not consistent.
* Signer Engine: do not block update command while signing.
* Enforcer: Increase size of keypairs(id) field in MySQL to allow more than
  32767 keys; see MIGRATION for details.
* ods-ksmutil: send trivial MySQL messages to stdout when exporting zonelist
  etc. Otherwise the resulting XML needs to be edited by hand.
* ods-control: Fix for Bourne shell.
* Bugreport #198: zone updates ignored?
* Signer Engine: Prevent race condition when setting up the workers and
  the command handler.
* Signer Engine: Quit when there are errors in the configuration.
* Signer Engine: NSEC chain could become broken if the predecessor domain
  of a deleted domain was a glue domain.


OpenDNSSEC 1.2.0 - 2011-01-13

Bugfixes:
* Enforcer: Fixed a number of build warnings.


OpenDNSSEC 1.2.0rc3 - 2010-12-27

* Moved migration instructions to the file MIGRATION

Bugfixes:
* Bugreport #199: The previous DB schema change made the zone removal broken.
* Enforcer: When retiring old KSK, use TTL(ds) and not TTL(ksk).
* Enforcer: Minimize the set of DS RRs sent to DelegationSignerSubmitCommand.
* Enforcer: Replace tab with a space character in the DNSKEY printed to syslog.
* Enforcer: Fixed pontential format string bug.
* ods-ksmutil: Log to syslog when ds-seen changes a key to active/standby.